z-index fixed

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,10 +1,4 @@
 .card {
-<<<<<<< HEAD
-  // z-index: 1;
-=======
-  margin-left: 20px;
-  z-index: 0;
->>>>>>> master
   width: 335px;
   background: linear-gradient($primary-blue, $danger-blue);
   // background-image: url(logo_wo_name_white.png);
@@ -18,6 +12,7 @@
   margin-top: 10px;
   color: white;
   position: relative;
+  z-index: 0;
   p {
     margin-bottom: 0;
   }
