--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0px;
-  // z-index: 4;
+  z-index: 4;
 }
 
 /* Logo */
